--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <div class="nav-left">
           <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li>><a href="about.html">About</li></a>
+            <li><a href="about.html">About</li></a>
 
             <div class="ref" onmouseout="nodisplay()" onmouseover="display()">
               <li>
