--- a/home.html
+++ b/home.html
@@ -48,9 +48,11 @@
       </nav>
     </section>
 
+<img src="siu.jpg" id="viu" />
+  
     <section id="hero">
       <div class="logo">
-        <img src="" />
+        
       </div>
       <h1>Stock analysis and guidance tool for teenagers in India</h1>
 
