--- a/home.html
+++ b/home.html
@@ -66,9 +66,36 @@
             placeholder="Search Companies.."
             title="Type in a category"
           />
+          <ul type="none" id="items">
+          <li><button>Asian Paints</button></li>
+          <li><button>Ambuja Cements</button></li>
+          <li><button>Axis Bank</button></li>
+          <li><button>Bajaj Finance</button></li>
+          <li><button>BPCL</button></li>
+          <li><button>Bank of Baroda</button></li>
+          <li><button>Cipla</button></li>
+          <li><button>Dr Reddys Laboratories</button></li>
+          <li><button>DLF</button></li>
+          <li><button>Godrej</button></li>
+          <li><button>Hindustan Unilever Ltd</button></li>
+          <li><button>HDFC</button></li>
+          <li><button>IRCTC</button></li>
+          <li><button>Jindal Steel</button></li>
+          <li><button>Kotak Mahindra Bank</button></li>
+          <li><button>Muthoot Finance</button></li>
+          <li><button>ONGC</button></li>
+          <li><button>Reliance</button></li>
+          <li><button>Sun Pharma</button></li>
+          <li><button>Tata Steel</button></li>
+          <li><button>Tata Motors</button></li>
+        </ul>
         </div>
       </div>
     </section>
+         <div class="stock-images">
+
+      <img src="" alt="" id="stock">
+      <button class="btnn" onclick="hide()" id="hidden"> Hide</button>
 
     <section id="footer">
       <h2>StockVerse</h2>
