--- a/home.html
+++ b/home.html
@@ -96,6 +96,7 @@
 
       <img src="" alt="" id="stock">
       <button class="btnn" onclick="hide()" id="hidden"> Hide</button>
+  </div>
 
     <section id="footer">
       <h2>StockVerse</h2>
