--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <nav class="navigation">
       <div class="nav-left">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
           <li><a class="active"href="about.html" href="about.html">About</a></li>
 
 
