--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
         </div>
         <div class="nav-right">
           <button class="btn">Log in</button>
-          <button class="btn">Sign up</button>
+          <button class="btn"><a href="sign.html">Sign up</a></button>
         </div>
       </nav>
     </section>
