--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
       </div>
       <div class="nav-right">
         <button class="btn" onclick="togle()">Log in</button>
-        <button class="btn">Sign up</button>
+        <button class="btn"><a href="sign.html">Sign up</a></button>
       </div>
 
     </nav>
