--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div class="nav-right">
-          <button class="btn">Log in</button>
+          <button class="btn"><a href="login.html">Log in</a></button>
           <button class="btn"><a href="sign.html">Sign up</a></button>
         </div>
       </nav>
