--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
           </ul>
         </div>
         <div class="nav-right">
-          <button class="btn"><a href="login.html">Log in</a></button>
-          <button class="btn"><a href="sign.html">Sign up</a></button>
+           <a href="login.html"> <button class="btn" onclick="togle()"> Log in</button></a>
+        <a href="signup.html"><button class="btn">Sign up</button></a> 
         </div>
       </nav>
     </section>
