--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
         </ul>
       </div>
       <div class="nav-right">
-        <button class="btn" onclick="togle()">Log in</button>
-        <button class="btn"><a href="sign.html">Sign up</a></button>
+         <a href="login.html"> <button class="btn" onclick="togle()"> Log in</button></a>
+        <a href="signup.html"><button class="btn">Sign up</button></a> 
       </div>
 
     </nav>
