--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
         /></a>
         <a href="https://www.instagram.com/singhvikash7077/?hl=en" target="_blank"> <img src="image/i.png" alt="" /></a>
 
-        <a href="https://github.com/" target="_blank"
+        <a href="https://github.com/Ssakshid" target="_blank"
           ><img src="image/g.png" alt=""
         /></a>
         <a href="" target="_blank"> <img src="image/l.png" alt="" /></a>
