--- a/contactus.html
+++ b/contactus.html
@@ -121,7 +121,7 @@
       <a href="https://www.facebook.com/aditya.roysha/" target="_blank"><img src="image/f.png" alt="" /></a>
       <a href="https://www.instagram.com/singhvikash7077/?hl=en" target="_blank"><img src="image/i.png" alt="" /></a>
       
-      <a href="https://github.com/" target="_blank"><img src="image/g.png" alt="" /></a>
+      <a href="https://github.com/Ssakshid" target="_blank"><img src="image/g.png" alt="" /></a>
       <a href="" target="_blank"><img src="image/l.png" alt="" /></a>
     </div>
     <div class="copyright">
