--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
         <a href="https://github.com/Ssakshid" target="_blank"
           ><img src="image/g.png" alt=""
         /></a>
-        <a href="" target="_blank"> <img src="image/l.png" alt="" /></a>
+        <a href="https://www.linkedin.com/in/nitin-chaudhary-332161230" target="_blank"> <img src="image/l.png" alt="" /></a>
       </div>
       <div class="copyright">
         <p>&copy;2022, Teen-stonks</p>
