--- a/home.html
+++ b/home.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
   </head>
 
   <body>
@@ -48,13 +52,15 @@
       </nav>
     </section>
 
-<img src="siu.jpg" id="viu" />
+<img src="siu.jpeg" id="viu" />
   
     <section id="hero">
       <div class="logo">
         
       </div>
-      <h1>Stock analysis and guidance tool for teenagers in India</h1>
+      <marquee id="zgt" behavior="" direction="left" onmouseover="this.stop();"
+      onmouseout="this.start();"> <b>
+      Stock analysis and guidance tool for teenagers in India</b></marquee>
 
       <div class="wrapper">
         <div class="x">
@@ -97,7 +103,6 @@
       <img src="" alt="" id="stock">
       <button class="btnn" onclick="hide()" id="hidden"> Hide</button>
   </div>
-
     <section id="footer">
       <h2>StockVerse</h2>
       <p>
