--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
             </div>
 
             <li><a href="calculator.html">Calculator</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav-right">
