--- a/calculator.html
+++ b/calculator.html
@@ -43,7 +43,7 @@
             </div>
 
             <li><a class="active" href="calculator.html">Calculator</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav-right">
