--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         </div>
         <div class="nav-right">
            <a href="login.html"> <button class="btn" onclick="togle()"> Log in</button></a>
-        <a href="signup.html"><button class="btn">Sign up</button></a> 
+        <a href="sign.html"><button class="btn">Sign up</button></a> 
         </div>
       </nav>
     </section>
