--- a/contactus.html
+++ b/contactus.html
@@ -22,8 +22,8 @@
     <nav class="navigation">
       <div class="nav-left">
         <ul>
-          <li><a  href="index.html">Home</a></li>
-          <li><a href="about.html" href="about.html">About</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
 
 
           <div class="ref" onmouseout="nodisplay()" onmouseover="display()">
